@@ -13,6 +13,10 @@
         * clearcmd.py: shadow history compression & erasing
         
         * envpersist.py, history.py: %env (sh profile only), %hist completers
+        
+        * genutils.py, Prompts.py, Magic.py: win32 - prompt (with \yDEPTH) and
+        term title now include the drive letter, and always use / instead of
+        os.sep (as per recommended approach for win32 ipython in general).
 
 2007-08-21  Ville Vainio  <vivainio@gmail.com>
 
